--- a/src/examples/poc-shell/CMakeLists.txt
+++ b/src/examples/poc-shell/CMakeLists.txt
@@ -1,11 +1,14 @@
-project(sample_workqueue)
+project(sample_poc_shell)
 add_executable(${PROJECT_NAME} main.c)
 
 # AVRTOS Configuration
 target_compile_definitions(${PROJECT_NAME} PUBLIC
-	CONFIG_KERNEL_TIME_SLICE_US=1000
+	CONFIG_THREAD_EXPLICIT_MAIN_STACK=1
+	CONFIG_THREAD_MAIN_STACK_SIZE=0x100
 	CONFIG_KERNEL_DEBUG=0
 	CONFIG_KERNEL_SCHEDULER_DEBUG=0
+	CONFIG_KERNEL_ASSERT=1
+	CONFIG_KERNEL_THREAD_IDLE_ADD_STACK=0x60
 
 )
 
